---

* [Bug 1477] 1st non-gmake make in clone w/VPATH can't make COPYRIGHT.
* [Bug 1480] snprintf() cleanup caused unterminated refclock IDs.

---
(4.2.6p1-RC4) 2010/02/04 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1455] ntpd does not try /etc/ntp.audio as documented.
* [Bug 1467] Fix bogus rebuild of sntp/sntp.html
* [Bug 1470] "make distdir" in $srcdir builds keyword-gen, libntp.a.
* [Bug 1473] "make distcheck" before build can't make sntp/version.m4.
* [Bug 1474] ntp_keygen needs LCRYPTO after libntp.a.
* Convert many sprintf() calls to snprintf(), also strcpy(), strcat().
* Fix widely cut-n-pasted bug in refclock shutdown after failed start.
* Remove some dead code checking for emalloc() returning NULL.
* Remove arlib.

---
(4.2.6p1-RC3) 2010/01/24 Released by Harlan Stenn <stenn@ntp.org>

* Use TZ=UTC instead of TZ= when calling date in scripts/mkver.in .
* [Bug 1448] Some macros not correctly conditionally or absolutely defined
  on Windows.
* [Bug 1449] ntpsim.h in ntp_config.c should be used conditionally.
* [Bug 1450] Option to exclude warnings not unconditionally defined on Windows.
* [Bug 1127] Properly check the return of X590_verify() - missed one.
* [Bug 1439] .texi generation must wait until after binary is linked.
* [Bug 1440] Update configure.ac to support kfreebsd.
* [Bug 1445] IRIX does not have -lcap or support linux capabilities.
* [Bug 1451] CID 115: sntp leaks KoD entry when updating existing.
* [Bug 1453] Use $CC in config.cache filename in ./build script.

---
(4.2.6p1-RC2) 2009/12/25 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1411] Fix status messages in refclock_oncore.c.
* [Bug 1416] MAXDNAME undefined on Solaris 2.6.
* [Bug 1419] ntpdate, ntpdc, sntp, ntpd ignore configure --bindir.
* [Bug 1424] Fix check for rtattr (rtnetlink.h).
* [Bug 1425] unpeer by association ID sets up for duplicate free().
* [Bug 1426] scripts/VersionName needs . on the search path.
* [Bug 1427] quote missing in ./build - shows up on NetBSD.